source/content/stylesheets/style.css
a{
    color: #F95A77 !important;
    text-decoration: none !important;
}

a:hover{
    color: #FF96A9 !important;
    text-decoration: underline !important;
}

.btn-secondary {
    color: #ffffff !important;
}

.btn-outline-secondary {
    color: #ffffff !important;
    background-color: #F95A77 !important;
    border-color: #F95A77 !important;
}

.btn-outline-secondary:hover {
    color: #ffffff !important;
    background-color: #FF96A9 !important;
    border-color: #FF96A9 !important;
}

h1, h2{
    color: #264653 !important;
    font-weight: 700; 
}

.brand{
    color: #264653 !important;
    font-size: 2.8rem !important;
    font-weight: 700 !important;
}

.sidebar{
    border-right: 1px solid #dee2e6;
    min-height: 100vh;
}

